--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "intervention/image": "3.7",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "milon/barcode": "^12.0",
         "simplesoftwareio/simple-qrcode": "4.2"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
